# laboratory_work_number2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: ArraySequence.h  Bit.h  BitSequence.h  DynamicArray.h  ICollection.h  IEnumerable.h  IEnumerator.h  ImmutableArraySequence.h  LinkedList.h  ListSequence.h  MutableArraySequence.h  Sequence.h  SequenceIterator.h  Sequence_utils.h
tests/: BitSequence_tests.cpp  DynamicArray_tests.cpp  Iterator_tests.cpp  LinkedList_tests.cpp  MapReduce_tests.cpp  Sequence_tests.cpp
